[package]
name = "nacos-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
reqwest-middleware = "0.1.6"
reqwest = "0.11"
task-local-extensions = "0.1.1"
async-trait = "0.1.53"
tokio = "1.18.2"
chrono = "0.4.19"
mut_static = "5.0.0"
lazy_static = "1.4.0"
toml = "0.5.9"
local_ipaddress = "0.1.3"